welcome.lessons.welcome.array.island.Island.scala.error
island:6: error: value += is not a member of Int
      niv+=1
         ^island:4: error: type mismatch;
 found   : Unit
 required: Int
  for(i<- 0 to n-1){
       ^