welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  val n = num.length -1
  val niv:Int=0
  for(i<- 0 to n-1){
    if(num(i) < num(i+1)){
      niv+=1
    }
  }
}